<?xml version="1.0" encoding="utf-8"?>
<resources>
  <!--<string name="accept">Accept</string>-->
  <string name="add_a_note">Add a note&#8230;</string>
  <string name="annotation_settings">Annotation settings</string>
  <string name="app_name">Pen&amp;PDF</string>
  <string name="autosave_settings">Auto save</string>
  <string name="browse">Browse</string>
  <string name="cancel">Cancel</string>
  <string name="cannot_interpret_file">Cannot read file: %1$s</string>
  <string name="cannot_open_buffer">Cannot open buffer</string>
  <string name="cannot_open_document">Cannot open document</string>
  <!--<string name="cannot_open_document_Reason">Cannot open document: %1$s</string>-->
  <string name="cannot_open_file_Path">Cannot open file: %1$s</string>
  <string name="choose_value">Choose value</string>
  <string name="copied_to_clipboard">Copied to clipboard</string>
  <!--<string name="copy">Copy</string>-->
  <!--<string name="copy_text">Copy text</string>-->
  <!--<string name="copy_text_to_the_clipboard">Copy text to the clipboard</string>-->
  <string name="delete">Delete</string>
  <string name="dialog_gotopage_cancel">Cancel</string>
  <string name="dialog_gotopage_ok">Go</string>
  <string name="dialog_gotopage_title">Go to page</string>
  <string name="dialog_gotopage_hint">number&#8230;</string>
  <string name="dialog_newdoc_cancel">Cancel</string>
  <string name="dialog_newdoc_ok">Create</string>
  <string name="dialog_newdoc_title">Create blank PDF</string>
  <!--<string name="dialog_newdoc_hint">filename&#8230;</string>-->
  <string name="dialog_newpermissions_ok">Close</string>
  <string name="dialog_newpermissions_title">Restart required</string>
  <string name="dialog_newpermissions_message">Due to a bug in some versions of Android the app must be closed and restarted to actually obtain the permissions that were just granted.</string>
  <string name="dismiss">Dismiss</string>
  <string name="display_settings">Display settings</string>
  <string name="document_has_changes_save_them">Document has changes. Do you want to save them?</string>
  <!--<string name="document_has_changes_save_thembefore_sharing">Document has changes. Save them before sharing?</string>-->
  <!--<string name="draw_annotation">Draw annotation</string>-->
  <!--<string name="edit_annotations">Edit annotations</string>-->
  <string name="enter_new_filename">Select above or enter new fielname</string>
  <string name="enter_password">Enter password</string>
  <!--<string name="entering_reflow_mode">Entering reflow mode</string>-->
  <string name="entry_screen_open_document">Open document</string>
  <string name="entry_screen_open_document_summ">Open a document by picking a file.</string>
  <string name="entry_screen_get_document">Import document</string>
  <!--<string name="entry_screen_get_document_summ">Import a document from another app.</string>-->
  <string name="entry_screen_settings">Settings</string>
  <string name="entry_screen_settings_summ">Fine tune the settings.</string>
  <string name="entry_screen_new_document">New Document</string>
  <string name="entry_screen_new_document_summ">Open a blank document for notes.</string>
  <string name="eraser_thickness">Eraser thickness</string>
  <string name="eraser_thickness_summ">Set the thickness of the eraser.</string>
  <string name="error_saveing">Error while saving</string>
  <!--<string name="exit_fullscreen">Press back to exit fullscreen</string>-->
  <string name="experimental_mode_settings">Experimental mode</string>
  <string name="experimental_mode">Experimental mode</string>
  <string name="experimental_mode_summ">Enable experimental mode.</string>
  <!--<string name="file">File</string>-->
  <string name="fill_out_text_field">Fill out text field</string>
  <string name="fit_width">Auto fit width</string>
  <string name="fit_width_summ">Automatically snaps the zoom level to fit the width of the page.</string>
  <string name="format_currently_not_supported">Format currently not supported</string>
  <!--<string name="highlight">Highlight</string>-->
  <string name="highlight_color">Highlight color</string>
  <string name="highlight_color_summ">Set color for highlighting text.</string>
  <string name="how_do_you_want_to_save">How do you want to save?</string>
  <!--<string name="ink">Ink</string>-->
  <string name="ink_color">Ink color</string>
  <string name="ink_color_summ">Set color for free hand drawing.</string>
  <string name="ink_thickness">Ink thickness</string>
  <string name="ink_thickness_summ">Set line thickness for free hand drawing.</string>
  <string name="keep_screen_on">Keep screen on</string>
  <string name="keep_screen_on_summ">Keep screen on while reading.</string>
  <!--<string name="leaving_reflow_mode">Leaving reflow mode</string>-->
  <string name="markup_settings">Markup settings</string>
  <string name="menu_accept">Accept</string>
  <string name="menu_add_text_annot">Add text annotation</string>
  <string name="menu_addpage">Add page</string>
  <!--<string name="menu_bookmarks">Bookmarks</string>-->
  <string name="menu_cancel">Cancel</string>
  <string name="menu_delete_note">Delete this note</string>
  <string name="long_press_to_delete">Long press to delete.</string>	
  <string name="menu_copytext">Copy text</string>
  <string name="menu_draw">Draw</string>
  <string name="menu_erase">Erase</string>
  <string name="menu_fullscreen">Fullscreen</string>
  <string name="menu_gotopage">Go to page</string>
  <string name="menu_highlight">Highlight</string>
  <string name="menu_linkback">Back before link clicked</string>
  <string name="menu_next">Next</string>
  <string name="menu_open">Open</string>
  <string name="menu_previous">Previous</string>
  <string name="menu_print">Print</string>
  <string name="menu_save">Save&#8230;</string>
  <string name="menu_search">Search</string>
  <!--<string name="menu_selection">Select text</string>-->
  <string name="menu_settings">Settings</string>
  <string name="menu_share">Share&#8230;</string>
  <string name="menu_strikeout">Strikeout</string>
  <string name="menu_underline">Underline</string>
  <string name="menu_undo">Undo</string>
  <!--<string name="more">More</string>-->
  <string name="no">No</string>
  <!--<string name="no_further_occurrences_found">No further occurrences found</string>-->
  <!--<string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>-->
  <!--<string name="no_media_warning">Storage media not present</string>-->
  <string name="no_text_selected">No text selected</string>
  <string name="not_supported">Not supported</string>
  <!--<string name="nothing_to_save">Nothing to save</string>-->

  <string name="notes_provider_summary">Notes created with Pen&amp;PDF</string>
  <string name="notes_provider_title">Pen&amp;PDF notes</string>
  <string name="notes">Notes</string>
  <string name="okay">Okay</string>
  <!--<string name="outline_title">Table of Contents</string>-->
  <string name="overwrite">Overwrite</string>
  <string name="overwrite_question">Overwrite?</string>
  <string name="parent_directory">..</string>
  <!--<string name="picker_title_App_Ver_Dir">%1$s %2$s: %3$s</string>-->
  <string name="print">Print</string>
  <!--<string name="print_failed">Print failed</string>-->
  <!--<string name="proof">Proof</string>-->
  <string name="reason">Reason</string>
  <string name="recent">Recent</string>
  <string name="save">Save</string>
  <!--<string name="save_before_print">Please save to a file before printing.</string>-->
  <string name="save_on_destroy">Auto save when destroyed</string>
  <string name="save_on_destroy_summ">Automatically save current file when the app is finally destroyed.</string>
  <string name="save_on_stop">Auto save when stopped</string>
  <string name="save_on_stop_summ">Automatically save current file when the app is stopped and sent to the background. If this is disabled, changes can in principle get lost if Android kills this app while in the background, however, it is recommender to  leave this off.</string>
  <string name="save_question">Save?</string>
  <string name="saveas">Save as</string>
  <!--<string name="scroll_continuous">Scroll continuous</string>-->
  <!--<string name="scroll_continuous_summ">Enable continuous scrolling.</string>-->
  <!--<string name="scroll_vertical">Scroll vertical</string>-->
  <!--<string name="scroll_vertical_summ">Scroll pages vertically.</string>-->
  <!--<string name="search">Search</string>-->
  <!--<string name="search_backwards">Search backwards</string>-->
  <!--<string name="search_document">Search document</string>-->
  <!--<string name="search_forwards">Search forwards</string>-->
  <string name="search_hint">Search a pdf with Pen&amp;PDF</string>
  <string name="searching_">Searching&#8230;</string>
  <!--<string name="select">Select</string>-->
  <string name="select_text">Select text first</string>
  <!--<string name="separation">Separation</string>-->
  <string name="settings_title">Settings</string>
  <!--<string name="strike_out">Strike-out</string>-->
  <string name="strikeout_color">Strikeout color</string>
  <string name="strikeout_color_summ">Set color for striking out text.</string>
  <!--<string name="successfully_saved">Successfully saved</string>-->
  <string name="tap_to_add_annotation">Tap to add annotation</string>
  <string name="text_not_found">Text not found</string>
  <string name="textannoticon_color">Text annotation icon color</string>
  <string name="textannoticon_color_summ">Set color for the icon of text annotations.</string>
  <!--<string name="toggle_links">Highlight and enable links</string>-->
  <!--<string name="toggle_reflow_mode">Toggle reflow mode</string>-->
  <string name="unable_to_interpret_uri">Unable to interpret</string>
  <!--<string name="underline">Underline</string>-->
  <string name="underline_color">Underline color</string>
  <string name="underline_color_summ">Set color for underlining text.</string>
  <!--<string name="unnamed">Unnamed</string>-->
  <string name="use_smart_text_selection">Use advanced text selection</string>
  <string name="use_smart_text_selection_summ">If selected, text selection is constrained to the area between leftmost and rightmost cursor position that was reached.</string>
  <string name="use_stylus">Use active stylus</string>
  <string name="use_stylus_summ">(Only for devices that have an active stylus) Only the stylus draws in free hand drawing mode and touching the screen with it automatically activates this mode.</string>
  <!--<string name="version">1.8 (git build)</string>-->
  <string name="yes">Yes</string>
  <string name="share_with">Share with</string>
  <string name="error_exporting">Error exporting to a temporary file</string>
  <string name="unknown_file_name">Unknown.pdf</string>
</resources>
