<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
  <item android:id="@+id/menu_cancel"
	android:icon="@drawable/ic_cleara_white_24dp"
	android:title="@string/menu_cancel" 
	app:showAsAction="always"
	android:background="?android:selectableItemBackground"
	/>
  <item
      android:id="@+id/menu_edit"
      android:icon="@drawable/ic_mode_edit_white_24dp"
      android:title="@string/menu_draw" 
      app:showAsAction="always"
      android:background="?android:selectableItemBackground"
      />
  <item android:id="@+id/menu_accept"
	android:icon="@drawable/ic_done_white_24dp"
	android:title="@string/menu_accept" 
	app:showAsAction="always"
	android:background="?android:selectableItemBackground"
	/>
</menu>
